MDEV-33894: Resurrect SET GLOBAL innodb_log_write_ahead_size

In commit 685d958e38b825ad9829be311f26729cccf37c46 (MDEV-14425)
we assumed that the physical block size (typically 512 or 4096 bytes)
would be an optimal ib_logfile0 write size. In fact, some file systems
or block devices may benefit from significantly larger write sizes,
for example due to transparent compression.

Let us resurrect the parameter innodb_log_write_ahead_size,
which must be a power of two and an integer fraction of
innodb_log_file_size and between the physical block size and
innodb_log_buffer_size. An attempt to violate these constraints by
setting this variable will result in an error. However,
SET GLOBAL innodb_log_file_size (log resizing) may silently
adjust innodb_log_write_ahead_size to a smaller value.

log_t::old_block_size_1: The write block size minus 1 during the
previous invocation of log_t::write_buf().

log_t::set_write_ahead_size(): Validate and update
innodb_log_write_ahead_size.

log_t::resize_write_buf(): Add some parameters.

log_t::write_buf(): Align write offsets and lengths to
innodb_log_write_ahead_size whenever possible. Near the
start of the log record payload area (offset 12 KiB)
we may have to refer to the physical block size. If the
block size is being shrunk from a previous value, we must
move the contents of the buffer to avoid rewriting already
written data. Last, we will only switch buffers if we have
buffered multiple write blocks.